# Cassia

./: Cargo.toml  build.rs
scripts/: link.sh
src/: extend.rs  lib.rs  main.rs
src/config/: mod.rs
src/config/grpc/: config.rs  mod.rs
src/module/: mod.rs
src/module/message/: mod.rs
src/module/message/task/: mod.rs  topic_hello.rs
src/module/users/: mod.rs
src/module/users/proto/: mod.rs  user.proto  user_proto.rs
src/module/users/services/: init.rs  mod.rs  user_service.rs
src/services/: lib.rs  mod.rs
src/services/grpc/: empty.proto  empty.rs  empty_imp.rs  mod.rs  service_register.rs
src/services/kafka/: dispatcher.rs  init.rs  mod.rs
src/services/nacos/: init.rs  mod.rs
src/services/postgres/: init.rs
src/services/redis/: init.rs
src/services/ws/: handler.rs  mod.rs
src/utils/: cors.rs  lib.rs  mod.rs  snowflake.rs
venders/plugins/hello/: Cargo.toml
venders/plugins/hello/src/: lib.rs
