[package]
name = "Cassia"
version = "0.1.0"
edition = "2024"
build = "build.rs"


[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
log = "0.4.27"
env_logger = "0.11"
actix-cors = "0.7"
deadpool-redis = "0.12"
redis = { version = "0.24", features = ["tokio-comp"] }  # 使用 tokio 异步
tokio = { version = "1", features = ["full"] }
once_cell = "1.21.3"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
chrono = "0.4"
nacos-sdk = "0.3"

#brew install librdkafka
rdkafka = { version = "0.36", features = ["cmake-build", "dynamic-linking"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
local-ip-address = "0.5"
http = "0.2.12"
tower = "0.4.13"
http-body = "0.4.6"

[build-dependencies]
cmake = "0.1"
git2 = "0.18"
tonic-build = "0.11"


